[workspace]
members = ["components/*"]

[workspace.dependencies]
anyhow = "1.0.75"
tracing = "0.1.40"

[package]
name = "hinoki"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[features]
default = ["markdown", "syntax-highlighting", "datetime"]

# Markdown to HTML support
markdown = ["hinoki_core/markdown"]
# Syntax highlighting for markdown code blocks
syntax-highlighting = ["hinoki_core/syntax-highlighting"]

# Filters for formatting timestamps as date / time / datetime
datetime = ["hinoki_core/datetime"]
# Support for timezone conversion for timestamp formatting filters
timezone = ["hinoki_core/timezone"]

# Allow JSON files to be loaded with load_data
json = ["hinoki_core/json"]
# Allow YAML files to be loaded with load_data
yaml = ["hinoki_core/yaml"]

# Development server (`hinoki serve`) support, not yet working
dev-server = ["dep:hinoki_dev_server"]

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
hinoki_core = { path = "components/core" }
hinoki_dev_server = { path = "components/dev_server", optional = true }
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Enable some optimizations for specific dependencies.
# Otherwise, debug builds are unbearably slow.
[profile.dev.package]
flate2 = { opt-level = 2 }
regex-automata = { opt-level = 2 }

fancy-regex = { opt-level = 1 }
regex-syntax = { opt-level = 1 }
similar = { opt-level = 1 }
syntect = { opt-level = 1 }
