[workspace]
members = ["components/*"]

[workspace.dependencies]
anyhow = "1.0.75"
camino = "1.1.6"
fs-err = "2.9.0"
tracing = "0.1.40"

# Config for 'cargo dist'
[workspace.metadata.dist]
cargo-dist-version = "0.13.2"
ci = ["github"]
installers = []
targets = ["x86_64-unknown-linux-gnu"]
pr-run-mode = "plan"

[package]
name = "hinoki"
description = "A simple, yet very flexible static site generator."
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/jplatte/hinoki"

[features]
default = ["dev-server", "markdown", "syntax-highlighting", "datetime"]

# Markdown to HTML support
markdown = ["hinoki_core/markdown"]
# Syntax highlighting for markdown code blocks
syntax-highlighting = ["hinoki_core/syntax-highlighting"]

# Filters for formatting timestamps as date / time / datetime
datetime = ["hinoki_core/datetime"]
# Support for timezone conversion for timestamp formatting filters
timezone = ["hinoki_core/timezone"]

# Allow JSON files to be loaded with load_data
json = ["hinoki_core/json"]
# Allow YAML files to be loaded with load_data
yaml = ["hinoki_core/yaml"]

# Development server (`hinoki serve`) support, not yet working
dev-server = ["dep:hinoki_dev_server"]

[dependencies]
camino = { workspace = true, features = ["serde"] }
clap = { version = "4.4.3", features = ["derive"] }
hinoki_core = { path = "components/core", default-features = false }
hinoki_dev_server = { path = "components/dev_server", optional = true }
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Enable some optimizations for specific dependencies.
# Otherwise, debug builds are unbearably slow.
[profile.dev.package]
syntect = { opt-level = 1 }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
