[workspace]
members = ["components/*"]

[workspace.package]
version = "0.1.2"

[workspace.dependencies]
anyhow = "1.0.75"
camino = "1.1.6"
clap = { version = "4.5.36", features = ["derive"] }
fs-err = "3.0.0"
hinoki_cli = { path = "components/cli" }
hinoki_core = { path = "components/core", default-features = false }
tracing = "0.1.40"

[package]
name = "hinoki"
description = "A simple, yet very flexible static site generator."
version.workspace = true
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/jplatte/hinoki"

[features]
default = ["dev-server", "markdown", "syntax-highlighting", "datetime"]

# Markdown to HTML support
markdown = ["hinoki_core/markdown"]
# Syntax highlighting for markdown code blocks
syntax-highlighting = ["hinoki_core/syntax-highlighting"]

# Filters for formatting timestamps as date / time / datetime
datetime = ["hinoki_core/datetime"]
# Support for timezone conversion for timestamp formatting filters
timezone = ["hinoki_core/timezone"]

# Allow JSON files to be loaded with load_data
json = ["hinoki_core/json"]
# Allow YAML files to be loaded with load_data
yaml = ["hinoki_core/yaml"]

# Development server (`hinoki serve`) support, not yet working
dev-server = ["dep:hinoki_dev_server"]

[dependencies]
camino = { workspace = true, features = ["serde"] }
clap.workspace = true
hinoki_cli.workspace = true
hinoki_core.workspace = true
hinoki_dev_server = { path = "components/dev_server", optional = true }
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Enable some optimizations for specific dependencies.
# Otherwise, debug builds are unbearably slow.
[profile.dev.package]
adler2 = { opt-level = 1 }
aho-corasick = { opt-level = 1 }
fancy-regex = { opt-level = 1 }
memchr = { opt-level = 1 }
miniz_oxide = { opt-level = 1 }
regex-syntax = { opt-level = 1 }
regex-automata = { opt-level = 1 }
syntect = { opt-level = 1 }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
