[package]
name = "hinoki_core"
version.workspace = true
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["winnow"]

[features]
default = ["markdown", "syntax-highlighting", "datetime"]

# Markdown to HTML support
markdown = ["dep:pulldown-cmark"]
# Syntax highlighting for markdown code blocks
syntax-highlighting = ["markdown", "dep:syntect"]

# Filters for formatting timestamps as date / time / datetime
datetime = ["dep:minijinja-contrib"]
# Support for timezone conversion for timestamp formatting filters
timezone = ["datetime", "minijinja-contrib?/timezone"]

# Allow JSON files to be loaded with load_data
json = ["dep:serde_json"]
# Allow YAML files to be loaded with load_data
yaml = ["dep:serde_yaml"]

[dependencies]
anyhow.workspace = true
bumpalo-herd = "0.1.2"
camino = { version = "1.1.6", features = ["serde1"] }
fs-err.workspace = true
globset = { version = "0.4.13", default-features = false }
indexmap = { version = "2.0.2", features = ["serde"] }
itertools = "0.14.0"
minijinja = { version = "2.0.1", features = ["custom_syntax", "loader"] }
minijinja-contrib = { version = "2.0.1", features = ["datetime"], optional = true }
pulldown-cmark = { version = "0.13.0", optional = true, default-features = false, features = ["html"] }
rayon = "1.8.0"
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = { version = "1.0.107", optional = true }
serde_yaml = { version = "0.9.25", optional = true }
smallvec = "1.13.2"
toml = { version = "0.9.4", default-features = false, features = ["parse", "serde"] }
tracing = "0.1.37"
walkdir = "2.4.0"
# not used directly, but winnow's simd feature should help toml's parsing speed
winnow = { version = "0.7.12", features = ["simd"] }

[dependencies.syntect]
version = "5.1.0"
default-features = false
features = ["default-syntaxes", "html", "plist-load", "regex-fancy", "yaml-load"]
optional = true

[dev-dependencies]
assert_fs = "1.1.1"
ctor = "0.5.0"
predicates = "3.1.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
