[package]
name = "hinoki_dev_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
camino = "1.1.6"
futures-util = { version = "0.3.30", features = ["alloc", "std"] }
hinoki_core = { path = "../core" }
hyper = { version = "1.0.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.2", features = ["http1", "http2", "tokio", "server-auto", "service"] }
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
tempfile = "3.8.1"
tokio = { version = "1.35.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tracing.workspace = true
